# aidlp

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NEW_ISSUES.md  README.md  SECURITY.md  config.yaml  demo_scenario.sh  docker-compose.yml  load_test.py  package.json  prometheus.yml  pyproject.toml  requirements.txt  terms.txt  test_local_setup.py  verify_dlp.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  docker.yml  docs.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  SECURITY.md  index.md  load_testing_report.md  package-lock.json  package.json  walkthrough.md
docs/.vitepress/: config.mts
docs/concepts/: redaction.md  secrets.md
docs/guide/: architecture.md  deployment.md  getting-started.md  introduction.md  troubleshooting.md
docs/reference/: config.md  metrics.md
src/: cli.py  config.py  dlp_engine.py  proxy_core.py
tests/: test_cli.py  test_dlp_engine.py  test_integration.py  test_load_async.py  test_vault_provider.py
